[package]
name = "poc-v3-lp-chaser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.6" }
chrono = { version = "0.4.38", features = ["serde"] }
ethers = { version = "2.0", features = ["ws", "openssl"] }
env_logger = "0.11.3"
eyre = "0.6"
log = "0.4.21"
num-traits = { version="0.2.16" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
sentry = "0.32.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uniswap_v3_math = { version = "0.4" }
uniswap-v3-sdk = { git = "https://github.com/nullbitx8/uniswap-v3-sdk-rs.git", features = ["extensions"] }
uniswap-sdk-core = { version = "0.20.0" }
